[project]
name = "molify"
version = "0.0.1a1"
description = "Interface between rdkit and ASE"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
]
dependencies = [
    "ase>=3.25.0",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "rdkit>=2024",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
    "ipykernel>=6.29.5",
    "networkx>=3.4.2",
]
docs = [
    "furo>=2024.8.6",
    "nbsphinx>=0.9.7",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-mermaid>=1.0.0",
]

[project.optional-dependencies]

vesin = [
    "vesin>=0.3.7",
]

[project.scripts]
packmol = "molify.packmol:packmol_cli"

[tool.ruff.lint]
select = ["E", "F", "N", "C", "I"]
extend-ignore = [
    "D213", "D203", "N802", "N801"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/molify"]

# [tool.cibuildwheel]
# Build for CPython 3.10, 3.11, 3.12, 3.13
# build = "cp3{10,11,12,13}-*"

# Skip 32-bit builds, musllinux, and Windows (for now)
# skip = [
#     "*-win*",           # Windows (needs mingw/gfortran setup)
#     "*-musllinux*",     # musl-based Linux
#     "*-manylinux_i686", # 32-bit Linux
#     "*-win32",          # 32-bit Windows
# ]

# # Build for x86_64 and ARM64
# [tool.cibuildwheel.linux]
# archs = ["x86_64", "aarch64"]
# # Install gfortran before building
# before-all = "yum install -y gcc-gfortran || apt-get update && apt-get install -y gfortran"

# [tool.cibuildwheel.macos]
# archs = ["x86_64", "arm64"]
# gfortran should be available via Homebrew on GitHub runners

[tool.codespell]
skip = "*.ipynb"
