[project]
name = "molify"
version = "0.2.0"
description = "Molecular Structure Interface with RDKit, ASE, Packmol and NetworkX"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Fabian Zills", email = "fzills@icp.uni-stuttgart.de" },
]
dependencies = [
    "ase>=3.25.0",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "rdkit>=2024",
]

[dependency-groups]
dev = [
    "pytest-cov>=6.1.1",
    "pytest>=8.3.5",
    "ruff>=0.11.8",
    "ipykernel>=6.29.5",
    "networkx>=3.4.2",
]
docs = [
    "furo>=2024.8.6",
    "nbsphinx>=0.9.7",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-mermaid>=1.0.0",
]

[project.optional-dependencies]

vesin = [
    "vesin>=0.3.7",
]

[project.scripts]
packmol = "molify.packmol:packmol_cli"

[project.urls]
Repository = "https://github.com/zincware/molify"
Releases = "https://github.com/zincware/molify/releases"
Discord = "https://discord.gg/7ncfwhsnm4"
Documentation = "https://molify.readthedocs.io/"


[tool.ruff.lint]
select = ["E", "F", "N", "C", "I"]
extend-ignore = [
    "D213", "D203", "N802", "N801"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/molify"]

[tool.codespell]
skip = "*.ipynb"
